# Ganglia

./: ARCHITECTURE.md  CHANGELOG.md  Dockerfile  INTEGRATIONS.md  LICENSE  OPERATORS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
docs/: index.html  styles.css
examples/: add_new_operator_example.lg.json  curl_openai_compat.sh  curl_reason.sh  python_local_script.py  taboo_coordinate_chain_example.lg.json
src/ganglia_runtime/: __init__.py  cli.py  config.py  errors.py  ollama_client.py  openai_compat.py  operator_loader.py  operator_spec.py  prompt_compiler.py  renderers.py  repair.py  router.py  runtime.py  server.py  trace_store.py  validators.py
src/ganglia_runtime/integrations/: continue_config.yaml  custom_app_example.py  haystack_example.py  langchain_example.py  llamaindex_example.py  local_script_example.py  open_webui_pipe.py
src/ganglia_runtime/operators/: adversarial_grid_chain.lg.json  coordinate_game.lg.json  grid_game.lg.json
tests/: test_api_unknown_operator.py  test_auth.py  test_ollama_usage.py  test_openai_compat.py  test_operator_loader.py  test_prompt_compiler.py  test_router.py  test_runtime_with_fake_client.py  test_schema_validation.py  test_semantic_validation.py  test_trace_api.py  test_trace_store.py
