[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ganglia-runtime"
version = "1.0.0"
description = "Local-first language-game reasoning-control middleware for Ollama and OpenAI-compatible LLM stacks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ganglia Contributors" }
]
keywords = ["llm", "ollama", "middleware", "reasoning", "json-schema", "fastapi", "openai-compatible"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.26",
  "pydantic>=2.5",
  "jsonschema>=4.21",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "jinja2>=3.1"
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/khalid-saqr/Ganglia"
Repository = "https://github.com/khalid-saqr/Ganglia"
Issues = "https://github.com/khalid-saqr/Ganglia/issues"

[project.scripts]
ganglia = "ganglia_runtime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ganglia_runtime = ["operators/*.lg.json", "integrations/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
